# hyprdictate

./: CMakeLists.txt  README.md  default.nix  flake.nix  plugin.nix
cli/: CMakeLists.txt
cli/src/: main.cpp
cmake/: deps.cmake  hyprdictate_asio.cmake
contrib/systemd/: hyprdictate.service  hyprdictate.service.in
daemon/: CMakeLists.txt
daemon/src/: audio.cpp  audio.hpp  config.cpp  config.hpp  inject.cpp  inject.hpp  ipc.cpp  ipc.hpp  log.hpp  main.cpp  session.cpp  session.hpp  vocabulary.cpp  vocabulary.hpp  whisper_engine.cpp  whisper_engine.hpp
plugin/: CMakeLists.txt
plugin/src/: dispatcher.cpp  dispatcher.hpp  globals.hpp  indicator.cpp  indicator.hpp  injector.cpp  injector.hpp  log.hpp  main.cpp  socket_client.cpp  socket_client.hpp
shared/: CMakeLists.txt
shared/include/hyprdictate/: protocol.hpp  state.hpp
shared/src/: protocol.cpp  state.cpp
